# django-tml

./: LICENSE  README.md  TODO  pyproject.toml
tml/: .gitignore  __init__.py  apps.py  io.py  parser.py  uml.py  utils.py  widgets.py
tml/static/tml/css/: help.css
tml/templates/tml/forms/widgets/: textarea.html
tml/templatetags/: tml.py
tml/tests/: test_parser.py  test_parser_closures.py  test_parser_lists.py  test_parser_subclass.py  test_stack.py  test_uml.py
